--- a/fund_teorica.tex
+++ b/fund_teorica.tex
@@ -978,7 +978,12 @@ Como se pode ver é necessário iniciar o processo de atualização dos pesos da red
 
 \section{Considerações} \label{sec:consideracoes}
 
+Apresentou-se nesse capitulo embasamento teórico para o desenvolvimento do projeto, abrangendo as três áreas fundamentais de sistemas de processamento de imagens: segmentação, descrição e classificação. 
+Foram estudadas técnicas de segmentação de imagens que permitem, através da combinação de diversas delas, a identificação de regiões de interesse. Além da identificação da região de interesse foi apresentada a técnica de normalização de imagens utilizando a análise de componentes principais.
+Foi fornecido embasamento teórico para efetuar a descrição de imagens utilizando propriedades de regiões, como área, solidez, posição do centroide, entre outros além dos conceitos para efetuar a descrição utilizando descritores de \emph{fourier}.
+Por fim apresentou-se uma visão geral de redes neurais e foram apresentadas noções sobre treinamento de redes utilizando algoritmos do tipo \emph{back propagation}.
+
 % fechamento com relacao aos objetivos do capitulo
 % deve ser parte da conclusao final
 % podem aparecer consideracoes pessoais
-TODO.
+% TODO.
