--- a/reflatex.bib
+++ b/reflatex.bib
@@ -1,83 +1,6 @@
 % This file was created with JabRef 2.9.2.
 % Encoding: Cp1252
 
-@MISC{HEDS9700,
-  author = {AGILENTTECHNOLOGIES},
-  title = {Small Optical Encoder Modules HEDS-9700 Series},
-  year = {2002},
-  url = {http://www.digchip.com/datasheets/parts/datasheet/021/QEDS-9871-pdf.php},
-  urlaccessdate = {28 de Fevereiro de 2012}
-}
-
-@MISC{TSMANUAL,
-  author = {EMBEDDED ARM},
-  title = {TS-7260 Hardware Manual},
-  year = {2012},
-  timestamp = {2012.01.16},
-  url = {http://www.embeddedarm.com/documentation/ts-7260-manual.pdf},
-  urlaccessdate = {16 de Janeiro de 2012}
-}
-
-@MISC{TS-7260,
-  author = {EMBEDDED ARM},
-  title = {TS-7260 Datasheet},
-  year = {2009},
-  timestamp = {2012.01.16},
-  url = {http://www.embeddedarm.com/documentation/ts-7260-datasheet.pdf},
-  urlaccessdate = {16 de Janeiro de 2012}
-}
-
-@MISC{EAGLE,
-  author = {CADSOFT},
-  title = {CadSoft EAGLE Freeware Version},
-  year = {2012},
-  url = {http://www.cadsoftusa.com/downloads/freeware/?language=en},
-  urlaccessdate = {05 de Março de 2012}
-}
-
-@MISC{SRF06,
-  author = {DEVANTECHELETRONIC},
-  title = {SRF06 Ultra-Sonic Ranger with 4-20mA Output},
-  year = {2012},
-  url = {http://www.robot-electronics.co.uk/htm/srf06tech.htm},
-  urlaccessdate = {29 de Fevereiro de 2012}
-}
-
-@MISC{X80,
-  author = {DOCTORROBOT},
-  title = {X80 Robot},
-  year = {2012},
-  timestamp = {2012.02.06},
-  url = {http://www.drrobot.com/products\_item. \\ asp?itemNumber=x80},
-  urlaccessdate = {06 de Fevereiro de 2012}
-}
-
-@MISC{PWMREF,
-  author = {ELETRONICAORG},
-  title = {Apostila Sobre Modulação PWM},
-  year = {2012},
-  url = {http://www.eletronica.org/arq\_apostilas/apostila\_pwm.pdf},
-  urlaccessdate = {04 de Março de 2012}
-}
-
-@MASTERSTHESIS{FABRO,
-  author = {J. A. Fabro},
-  title = {Grupos neurais e sistemas nebulosos: aplicação a navegação autonoma},
-  school = {Universidade Estadual de Campinas. Faculdade de Engenharia Elétrica},
-  year = {1996},
-  type = {Mestrado},
-  month = {Fevereiro}
-}
-
-@ARTICLE{FRACASSO,
-  author = {FRACASSO, PAULO T. and COSTA, ANNA H.R.},
-  title = {Navegação Reativa de Robôs Móveis Autônomos Utilizando Lógica Nebulosa
-	com Regras Ponderadas},
-  journal = {VII SBAI/ II IEEE LARS},
-  year = {2005},
-  month = {Setembro}
-}
-
 @MISC{AUTOVETORES-DEDUCAO,
   author = {L. El Ghaoui},
   title = {Hyper-Textbook: Optimization Models and Applications},
@@ -85,31 +8,7 @@
   owner = {telmo},
   timestamp = {2013.11.18},
   url = {https://inst.eecs.berkeley.edu/~ee127a/book/login/index.html},
-  urlaccessdate = {30 de julho de 2011}
-}
-
-@MISC{GIT,
-  author = {GIT},
-  title = {Git - Fast Version Control System},
-  year = {2012},
-  url = {http://git-scm.com/},
-  urlaccessdate = {06 de Março de 2012}
-}
-
-@MISC{GITHELP,
-  author = {GITHUB},
-  title = {Help.GitHub},
-  year = {2012},
-  url = {http://help.github.com/},
-  urlaccessdate = {06 de Março de 2012}
-}
-
-@MISC{GITHUB,
-  author = {GITHUB},
-  title = {GitHub},
-  year = {2012},
-  url = {https://github.com/},
-  urlaccessdate = {06 de Março de 2012}
+  urlaccessdate = {13 de novembro de 2013}
 }
 
 @BOOK{GONZALEZ-2006,
@@ -123,16 +22,6 @@
   timestamp = {2013.11.15}
 }
 
-@ARTICLE{KOSKO,
-  author = {KOSKO, B.},
-  title = {Fuzzy cognitive maps},
-  journal = {International Journal Man-Machine Studie},
-  year = {1986},
-  volume = {24},
-  pages = {65-75},
-  number = {1}
-}
-
 @BOOK{AUTOVETORES,
   title = {Linear algebra with applications},
   publisher = {Prentice Hall},
@@ -142,8 +31,7 @@
   isbn = {9780138493080},
   lccn = {97028298},
   owner = {telmo},
-  timestamp = {2013.11.18},
-  url = {http://books.google.ie/books?id=BeAZAQAAIAAJ}
+  timestamp = {2013.11.18}
 }
 
 @ARTICLE{USO-COMPONENTES-ELETRONICOS,
@@ -180,17 +68,6 @@
   url = {http://www.sciencedirect.com/science/article/pii/S0924013607000052}
 }
 
-@ARTICLE{MAMDAMI,
-  author = {E. H. Mamdani and S. Assilian},
-  title = {An Experiment in Linguistic Synthesis with a Fuzzy Logic Controller},
-  journal = {Int. J. Hum.-Comput. Stud.},
-  year = {1999},
-  volume = {51},
-  pages = {135-147},
-  number = {2},
-  publisher = {Elsevier}
-}
-
 @ARTICLE{USO-INSPECAO-PCB,
   author = {N.S.S. Mar and P.K.D.V. Yarlagadda and C. Fookes},
   title = {Design and development of automatic visual inspection system for
@@ -206,14 +83,6 @@
   owner = {telmo},
   timestamp = {2013.11.15},
   url = {http://www.sciencedirect.com/science/article/pii/S0736584511000457}
-}
-
-@BOOKLET{BELLATOR,
-  title = {Desenvolvimento do Projeto Bellator},
-  author = {Alexandre Jacques Marin and Bruno Weingraber and Lucas Campiolo Paiva
-	and Yuri Antin Wergrzn},
-  address = {Curitiba},
-  year = {2010}
 }
 
 @MISC{MATHWORKS-HELP,
@@ -235,7 +104,7 @@
 	
 	 url = {http://www.mathworks.com/help/images/image-enhancement-and-analysis.html},
 	
-	 urlaccessdate = {06 de Março de 2012}
+	 urlaccessdate = {15 de novembro de 2013}
 	
 	}},
   url = {http://www.mathworks.com/help/images/image-enhancement-and-analysis.html},
@@ -249,7 +118,7 @@
   owner = {telmo},
   timestamp = {2013.11.19},
   url = {http://www.mathworks.com/help/images/ref/regionprops.html},
-  urlaccessdate = {06 de Março de 2012}
+  urlaccessdate = {16 de novembro de 2013}
 }
 
 @MISC{MATHWORKS-HELP-3,
@@ -259,40 +128,27 @@
   owner = {telmo},
   timestamp = {2013.11.23},
   url = {http://www.mathworks.com/help/nnet/ug/multilayer-neural-network-architecture.html},
-  urlaccessdate = {06 de Março de 2012}
+  urlaccessdate = {17 de novembro de 2013}
 }
 
-@OTHER{FCMENDONCA,
-  author = {MENDONÇA, M.},
-  school = {Universidade Tecnológica Federal do Paraná},
-  title = {Uma Contribuição ao Desenvolvimento de Sistemas Inteligentes Utilizando
-	Redes Cognitivas Dinâmicas},
-  type = {Doutorado},
-  year = {2011}
+@MISC{MATHWORKS-HELP-4,
+  author = {MathWorks},
+  title = {Bayesian regulation backpropagation},
+  year = {2013},
+  owner = {telmo},
+  timestamp = {2013.11.25},
+  url = {http://www.mathworks.com/help/nnet/ref/trainbr.html},
+  urlaccessdate = {25 de novembro de 2013}
 }
 
-@ARTICLE{MENDONCA,
-  author = {MENDONÇA, M. and ARRUDA, L.V.R. and NEVES, F.},
-  title = {Autonomous Navigation System Using Event Driven-Fuzzy Cognitive Maps},
-  journal = {© Springer Science+Business Media},
-  year = {2011},
-  month = {Outubro}
-}
-
-@BOOK{PEDRYCZ,
-  title = {Fuzzy Systems Engineering - Toward Human-Centric Computing},
-  publisher = {Wiley},
-  year = {2007},
-  author = {Witold Pedrycz and Fernando A. C. Gomide},
-  pages = {I-XXII, 1-526},
-  isbn = {978-0-471-78857-7}
-}
-
-@MISC{74LS244,
-  author = {PHILIPS},
-  title = {74LS244 Octal buffer,line driver; 3-state},
-  url = {http://www.learn-c.com/74ls244.pdf},
-  urlaccessdate = {26 de Fevereiro de 2012}
+@MISC{MATHWORKS-HELP-5,
+  author = {MathWorks},
+  title = {Levenberg-Marquardt backpropagation},
+  year = {2013},
+  owner = {telmo},
+  timestamp = {2013.11.25},
+  url = {http://www.mathworks.com/help/nnet/ref/trainlm.html},
+  urlaccessdate = {25 de novembro de 2013}
 }
 
 @INPROCEEDINGS{BACKGROUND-SUBTRACTION,
@@ -314,58 +170,6 @@
   timestamp = {2013.11.15}
 }
 
-@MISC{LM317,
-  author = {NATIONAL SEMICONDUCTOR},
-  title = {LM317 - 3-Terminal Adjustable Regulator},
-  year = {2012},
-  url = {http://www.national.com/mpf/LM/LM317.html},
-  urlaccessdate = {21 de Março de 2012}
-}
-
-@MISC{DATASHEETSENSOR,
-  author = {SHARPCORPORATION},
-  title = {GP2Y0A02F98YK Datasheet},
-  year = {2006},
-  url = {http://www.mindsensors.com/index.php?module=documents\&JAS\_DocumentManager\_op= \\ downloadFile\&JAS\_File\_id=335},
-  urlaccessdate = {1 de Agosto de 2011}
-}
-
-@MISC{DATASHEETKIT,
-  author = {SILICONLABS},
-  title = {C8051F340DK Datasheet},
-  year = {2006},
-  url = {http://datasheet.octopart.com/C8051F340DK-Silicon-Laboratories-datasheet-9512.pdf},
-  urlaccessdate = {1 de Agosto de 2011}
-}
-
-@ARTICLE{GROUMPOS,
-  author = {Chrysostomos D. Stylios and Peter P. Groumpos},
-  title = {Fuzzy Cognitive Maps in modeling supervisory control systems},
-  journal = {Journal of Intelligent and Fuzzy Systems},
-  year = {2000},
-  volume = {8},
-  pages = {83-98},
-  number = {1},
-  bibsource = {DBLP, http://dblp.uni-trier.de},
-  ee = {http://iospress.metapress.com/content/px4n2k9rtna68f9d/}
-}
-
-@MISC{CC,
-  author = {TECHNOLOGICSYSTEMS},
-  title = {Linux for ARM on TS-7000 Embedded Computers},
-  year = {2012},
-  timestamp = {2012.02.27},
-  url = {http://www.embeddedarm.com/software/software-arm-linux.php},
-  urlaccessdate = {27 de Fevereiro de 2012}
-}
-
-@MISC{LM324,
-  author = {TEXASINSTRUMENTS},
-  title = {LM124,LM224,LM324,LM2902 Low Power Quad Operational Amplifiers},
-  url = {http://www.national.com/ds/LM/LM124.pdf},
-  urlaccessdate = {25 de fevereiro de 2012}
-}
-
 @MISC{IMAGEM-ARRANHA,
   author = {WIKIPEDIA},
   title = {Balanced histogram thresholding},
@@ -373,7 +177,7 @@
   owner = {telmo},
   timestamp = {2013.11.16},
   url = {http://en.wikipedia.org/wiki/Balanced\_histogram\_thresholding},
-  urlaccessdate = {29 de julho de 2011}
+  urlaccessdate = {18 de novembro de 2013}
 }
 
 @MISC{IMAGEM-MOMENTO-INERCIA,
@@ -383,17 +187,7 @@
   owner = {telmo},
   timestamp = {2013.11.19},
   url = {http://en.wikipedia.org/wiki/Second\_moment\_of\_area},
-  urlaccessdate = {29 de julho de 2011}
-}
-
-@ARTICLE{ZADEH,
-  author = {Lotfi A. Zadeh},
-  title = {Fuzzy Sets},
-  journal = {Information and Control},
-  year = {1965},
-  volume = {8},
-  pages = {338-353},
-  number = {3}
+  urlaccessdate = {15 de novembro de 2013}
 }
 
 @ARTICLE{USO-INSPECAO-PCB-2,
