--- a/inicio.tex
+++ b/inicio.tex
@@ -15,8 +15,8 @@
 %\autorquatro{Nome do Quarto Autor} % quarto autor do trabalho, caso exista
 \cita{FRIESEN, Telmo} % sobrenome (maiusculas) e nome do(s) autor(es) do trabalho, separados por ponto-e-virgula (ate quatro autores para TCC)
 
-\palavraschave{Processamento de Imagens, Classificação de Objetos, Reconhecimento de Padrões, Aprendizagem de Máquina, Rede Neural, Análise de Componentes Principais, Descritores de Fourier } % palavras-chave do trabalho
-\keywords{Image Processing, Object Classification, Pattern Recognition, Machine Learning, Neural Network, Principal Components Analysis, Fourier Descriptors} % palavras-chave do trabalho em ingles
+\palavraschave{Processamento de Imagens, Análise de Componentes Principais, Descritores de Fourier, Classificação de Objetos, Reconhecimento de Padrões, Redes Neurais  } % palavras-chave do trabalho
+\keywords{Image Processing, Principal Components Analysis, Fourier Descriptors, Object Classification, Pattern Recognition, Neural Networks } % palavras-chave do trabalho em ingles
 
 \comentario{\UTFPRdocumentodata\ apresentado ao \UTFPRdepartamentodata\ como requisito parcial para obten\c{c}\~ao do grau de \UTFPRtitulacaodata\ no \UTFPRprogramadata\ da \ABNTinstituicaodata.}
 
@@ -43,26 +43,32 @@ amor e dedicação ao me dar a oportunidade de cursar Engenharia de Computação. E 
 %resumo
 \begin{resumo}
 
-\emph{TODO: ARRUMAR CASO NÃO SEJA FEITA A IMPLEMENTAÇÃO EM C++}
+%Introdução
 Técnicas de visão computacional podem ser ferramentas úteis para a automação de linhas de produção em tarefas como, por exemplo, a fabricação de componentes eletrônicos, a inspeção do acabamento em objetos metálicos, a produção de circuitos impressos, entre
-outros. Muitas vezes, existem etapas da produção em indústrias metalúrgicas, nas quais se necessita identificar objetos metálicos e sua respectiva orientação angular, seja para análise, separação ou mesmo somente para classificação desses objetos. O objetivo deste trabalho é desenvolver um sistema capaz de classificar objetos metálicos e medir seu respectivo ângulo de rotação com relação ao eixo x do plano cartesiano, sendo os objetos previamente conhecidos pelo sistema utilizando-se técnicas de aprendizagem de máquina. O
-desenvolvimento do projeto é dividido em quatro etapas. A primeira etapa consiste no estudo de técnicas de segmentação de imagem e implementação no software MATLAB. A segunda etapa consiste no estudo de técnicas de descrição de imagens e também implementação no MATLAB. Na terceira etapa é implementado no MATLAB um método de classificação. Finalmente, as técnicas das etapas anteriores que apresentarem os melhores resultados são implementadas utilizando-se linguagens como C, C++ ou Java, com o objetivo de construir um protótipo funcional a ser utilizado no ambiente de chão de fábrica. O sistema é dividido em três módulos: segmentação, descrição e classificação dos objetos. Após a aquisição da imagem do objeto a ser classificado o módulo de segmentação seleciona a área de interesse da imagem. No módulo de descrição são extraídas características da área de interesse da imagem, as quais são fornecidas ao terceiro módulo do sistema que classifica o objeto e mede a sua respectiva orientação angular. Portanto, o resultado do trabalho é um sistema capaz de classificar objetos utilizando-se algoritmos de aprendizagem de máquina, medir o
-ângulo desses objetos e implementar esta solução em uma plataforma que possa ser utilizada em ambientes industriais.
+outros. Muitas vezes, existem etapas da produção em indústrias metalúrgicas, nas quais se necessita identificar objetos metálicos e sua respectiva orientação angular, seja para análise, separação ou mesmo somente para classificação desses objetos. 
+%Objetivo
+O objetivo deste trabalho é desenvolver um sistema capaz de classificar objetos metálicos e medir seu respectivo ângulo de rotação com relação ao eixo x do plano cartesiano, sendo os objetos previamente conhecidos pelo sistema utilizando-se técnicas de aprendizagem de máquina. 
+% Metodologia
+O desenvolvimento do projeto é dividido em três etapas. A primeira etapa consiste no estudo de técnicas de segmentação de imagem e implementação no software MATLAB. A segunda etapa consiste no estudo de técnicas de descrição de imagens e também implementação no MATLAB. Finalmente, na terceira etapa é implementado no MATLAB um sistema de redes neurais capazes de classificar o objeto e medir seu ângulo. Para cada etapa do desenvolvimento do projeto adota-se a metodologia de desenvolvimento em espiral, onde a cada ciclo de desenvolvimento são agregadas novas funcionalidades ao sistema. Para o teste e a validação do sistema é desenvolvido um ambiente de testes, onde objetos especificamente selecionados são posicionados de forma automática, possibilitando a captura de imagens do objeto em diversas posições angulares. 
+% Desenvolvimento
+O sistema é dividido em três módulos: segmentação, descrição e classificação dos objetos. Após a aquisição da imagem do objeto a ser classificado o módulo de segmentação seleciona a área de interesse da imagem. No módulo de descrição são extraídas características da área de interesse da imagem, as quais são fornecidas ao terceiro módulo do sistema que classifica o objeto e mede a sua respectiva orientação angular. 
+% Resultados
+Portanto, o resultado do trabalho é um sistema capaz de classificar objetos e medir o ângulo desses objetos utilizando técnicas de processamento de imagens e aprendizado de máquina.
 
 \end{resumo}
 
 %abstract
 \begin{abstract}
 
-\emph{TODO: TRADUZIR C++}
-This document presents a complete description of the reconstruction of a robotic platform, in addition to the development and test of two autonomous navigation algorithms for it, aiming to analyze and compare the behavior of the ED-FCM approach to robotic navigation (Event-Driven Fuzzy Cognitive Maps) against a classic Fuzzy logic based navigation. In this document, all steps of the reconstruction of the robotic platform, including all needed documentation for any future use, are described. Additionally, all theoretical knowledge necessary to understand both navigation algorithms is provided, together with all description of the implementation, test and comparison of the algorithms.
+\emph{TODO: TRADUZIR}
+
 \end{abstract}
 
 % listas (opcionais, mas recomenda-se a partir de 5 elementos)
 \listadefiguras % geracao automatica da lista de figuras
-\listadetabelas % geracao automatica da lista de tabelas
-\listadesiglas % geracao automatica da lista de siglas
-\listadesimbolos % geracao automatica da lista de simbolos
+%\listadetabelas % geracao automatica da lista de tabelas
+%\listadesiglas % geracao automatica da lista de siglas
+%\listadesimbolos % geracao automatica da lista de simbolos
 
 % sumario
 \sumario % geracao automatica do sumario
