--- a/reflatex.bib
+++ b/reflatex.bib
@@ -151,6 +151,16 @@
   urlaccessdate = {25 de novembro de 2013}
 }
 
+@MISC{MATHWORKS-HELP-6,
+  author = {MathWorks},
+  title = {Fit Data with a Neural Network},
+  year = {2013},
+  owner = {telmo},
+  timestamp = {2013.11.25},
+  url = {http://www.mathworks.com/help/nnet/gs/fit-data-with-a-neural-network.html},
+  urlaccessdate = {25 de novembro de 2013}
+}
+
 @INPROCEEDINGS{BACKGROUND-SUBTRACTION,
   author = {Piccardi, M.},
   title = {Background subtraction techniques: a review},
