--- a/testesresultados.tex
+++ b/testesresultados.tex
@@ -1,9 +1,21 @@
 \chapter{Testes e Análise de Resultados} \label{chap:testes}
 
 Este capitulo apresenta o ambiente de testes desenvolvido para validar o sistema, os testes efetuados e os resultados obtidos.
-Para testar o sistema foi necessário o desenvolvimento de um ambiente de testes que possibilitasse a captura de imagens de forma automatizada. O sistema desenvolvido é apresentado na seção \ref{sec:testes_ambiente}. Em seguida, na seção \ref{sec:testes_testes}, são apresentados os testes aos quais o sistema foi submetido e os respectivos resultados obtidos. Ao final, na seção \ref{sec:testes_consideracoes}, são apresentadas algumas considerações.
+A seção \ref{sec:testes_ambiente} apresenta uma ambiente de testes para validação do sistema, que possibilita a captura de imagens de forma automatizada. Em seguida, na seção \ref{sec:testes_testes}, são apresentados os testes aos quais o sistema foi submetido e os respectivos resultados obtidos. Ao final, na seção \ref{sec:testes_consideracoes}, são apresentadas algumas considerações.
 
 
 \section{Ambiente de testes} \label{sec:testes_ambiente}
+
+Inicialmente para validar o sistema proposto é necessário a definição dos objetos reconhecidos. Com o objetivo de possibilitar a validação do sistema porém sem comprometer a aplicação real do projeto utiliza-se os objetos dispostos na figura \ref{}.
+
+
+
+
+Para validar o sistema desenvolvido é necessário um ambiente que permita a captura de imagens de objetos em diversas orientações angulares. É necessário também a definição de um conjunto de objetos que serão reconhecidos 
+
 \section{Testes} \label{sec:testes_testes}
 \section{Considerações} \label{sec:testes_consideracoes}
+
+Nesse capítulo apresentou-se um ambiente de testes que possibilitou a validação do sistema apresentado no capitulo \ref{chap:desenv}.
+Utilizando o ambiente forma executados....
+obtendo...
