--- a/concl.tex
+++ b/concl.tex
@@ -12,12 +12,6 @@ Este capítulo apresenta as considerações finais da monografia. Aqui são discutid
 
 \section{Trabalhos Futuros}
 
-Implementar em C, Java...
+%TODO
 
-%Para trabalhos futuros utilizando a plataforma Bellator reconstruída, a equipe recomenda combinar sensores de ultrassom com sensores infravermelhos, pois os sensores de ultrassom apresentam uma faixa de operação cuja distância mínima é menor que a do infravermelho, podendo capturar distâncias de 2 cm, como o sensor SRF06 \cite{SRF06}. Atualmente a distância mínima suportada pelo sistema de navegação é de 15 cm, com os sensores de ultrassom, os algoritmos poderiam operar em uma faixa mais abrangente. Outra su\-ges\-tão é introduzir ao sistema uma realimentação por bússola pois nesse projeto a realimentação odométrica fornecida pelos \emph{encoders} é utilizada para ajustar a velocidade das rodas e não faz uma interpretação da direção do robô. 
-%
-%Para tornar o robô seguro para o manuseio, sugere-se a fixação dos sensores parafusando-os no chassi do Bellator e acoplando uma carcaça que proteja os circuitos microcontrolados. A equipe também recomenda a reconstrução da placa de roteamento utilizando um método industrial para confeccção de placas de circuito impresso. 
-%
-%Para os sistemas de navegação, um trabalho futuro de grande riqueza seria introduzir ao sistema a capacidade de interpretar a posição do robô em relação a um referencial. Com isso, o robô seria capaz de resolver problemas nos quais este deve partir de um ponto inicial no espaço a um ponto final, guiando-se pelos sensores para evitar colisões e realimentar-se por um sistema de posicionamento para corrigir a trajetória. 
-%
-%Outro trabalho, produto deste, seria introduzir ao sistema uma memória a qual pudesse mapear os obstáculos capturados pelos sensores do robô, assim sendo, produzir-se-ia um artefato autônomo capaz de mapear terrenos. Outro aprimoramento da plataforma seria implementar um sistema de controle remoto, na qual uma base remota pudesse pilotar o robô via \emph{joystick} - esta funcionalidade poderia ser usada para treinar o sistema de controle ED-FCM. Finalmente, a equipe sugere um projeto futuro no qual seja implementado um sistema de visão computacional por câmera de vídeo. Sobre os algoritmos, a equipe sugere que os estudos empíricos sejam continuados e que nos próximos trabalhos sejam apresentadas medidas quantitativas de desempenho para ambos algoritmos, \emph{fuzzy} e ED-FCM, justificando a importância que essas medidas teriam na escolha de uma das abordagens no projeto de um sistema de navegação.
+Futuramente o projeto será implementado em uma linguagem de programação convencional. Isso faz se necessário para implantação do sistema em ambiente industrial real, onde ele fará parte de uma linha de produção. Mais detalhes da futura aplicação do projeto não podem ser apresentados devido ao interesse comercial no projeto.
