--- a/desenvolvimento.tex
+++ b/desenvolvimento.tex
@@ -1,7 +1,7 @@
 %---------- Segundo Capitulo ----------
 \chapter{Desenvolvimento} \label{chap:desenv}
 
-Este capítulo apresenta o desenvolvimento do projeto, detalhando cada parte do sistema desenvolvido. A descrição apresentada a seguir referencia os conceitos apresentados no capítulo \ref{chap:fundteor}. A figura \ref{fig:desenv_overview} apresenta uma visão geral do sistema desenvolvido.
+Este capítulo apresenta o desenvolvimento do projeto, detalhando cada parte do sistema desenvolvido. A descrição apresentada a seguir referencia os conceitos apresentados no capítulo \ref{chap:fundteor}. O sistema foi implementado no software Matlab \cite{MATLAB} permitindo a execução de diversos testes para validação conforme será visto no capitulo \ref{chap:testes}. A figura \ref{fig:desenv_overview} apresenta uma visão geral do sistema desenvolvido.
 
 \begin{figure}[H]
 	\centering
