--- a/reflatex.bib
+++ b/reflatex.bib
@@ -22,6 +22,15 @@
   timestamp = {2013.11.15}
 }
 
+@MISC{MINDSTORMS,
+  author = {Lego},
+  title = {Mindstorms},
+  year = {2013},
+  owner = {telmo},
+  timestamp = {2013.11.25},
+  url = {http://mindstorms.lego.com}
+}
+
 @BOOK{AUTOVETORES,
   title = {Linear algebra with applications},
   publisher = {Prentice Hall},
@@ -159,6 +168,15 @@
   timestamp = {2013.11.25},
   url = {http://www.mathworks.com/help/nnet/gs/fit-data-with-a-neural-network.html},
   urlaccessdate = {25 de novembro de 2013}
+}
+
+@MISC{MATLAB,
+  author = {MathWorks},
+  title = {Matlab},
+  year = {2013},
+  owner = {telmo},
+  timestamp = {2013.11.25},
+  url = {http://www.mathworks.com/products/matlab/}
 }
 
 @INPROCEEDINGS{BACKGROUND-SUBTRACTION,
